--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="./style.css">
   <title>Today Calendar</title>
 
-  
+
 </head>
 <body>
   <div class="container">
@@ -30,3 +30,41 @@
   <script src="main.js"></script>
 </body>
 </html>
+
+
+<!-- 
+
+
+Analysis and design of 2-I/P NAND, 2-I/P NOR and 
+complex Boolean function realization using equivalent CMOS inverter for simultaneous switching,
+Complex Boolean function realization using various design stylesand Basic
+gates and 
+
+MUX realization using pass transistor and transmission gate logic
+
+
+-->
+
+ <!-- 
+
+  Static CMOS
+Pseudo NMOS design styles
+Pass transistor, Transmission gate
+Dynamic: C-MOS
+Significance of Stick diagram and Design rules, Layout of CMOS NAND,
+CMOS NOR
+  -->
+
+
+
+  <!-- 
+    
+    it attempts to reduce the no. of transistors required
+
+    It is a popular & widely used alternative to cMos.
+
+it attempts to reduce the number of transistors required
+to implement logic by allowing the primary input/ps to
+drive gate terminal as well as source oY drain terminal.
+
+   -->
