--- a/index.html
+++ b/index.html
@@ -67,4 +67,24 @@ it attempts to reduce the number of transistors required
 to implement logic by allowing the primary input/ps to
 drive gate terminal as well as source oY drain terminal.
 
+
+
+
+
+
    -->
+
+
+   <!-- 
+
+
+
+when the word line is deasseted all cells in the
+row have their contents restored at full charge /dishargs
+leve. A refresh opeyation thus refreshes all the
+cells in the Same row at once.
+
+
+    -->
+
+    
