--- a/index.html
+++ b/index.html
@@ -32,135 +32,23 @@
 </html>
 
 
-<!-- 
-
-
-Analysis and design of 2-I/P NAND, 2-I/P NOR and 
-complex Boolean function realization using equivalent CMOS inverter for simultaneous switching,
-Complex Boolean function realization using various design stylesand Basic
-gates and 
-
-MUX realization using pass transistor and transmission gate logic
-
-
--->
-
- <!-- 
-
-  Static CMOS
-Pseudo NMOS design styles
-Pass transistor, Transmission gate
-Dynamic: C-MOS
-Significance of Stick diagram and Design rules, Layout of CMOS NAND,
-CMOS NOR
-  -->
-
-
-
-  <!-- 
-    
-    it attempts to reduce the no. of transistors required
-
-    It is a popular & widely used alternative to cMos.
-
-it attempts to reduce the number of transistors required
-to implement logic by allowing the primary input/ps to
-drive gate terminal as well as source oY drain terminal.
 
 
 
 
 
 
-   -->
-
-
-   <!-- 
-
-
-
-when the word line is deasseted all cells in the
-row have their contents restored at full charge /dishargs
-leve. A refresh opeyation thus refreshes all the
-cells in the Same row at once.
-
-
-Hi,
-
-I hope this message finds you well! I came across the Data Center Engineering Intern (https://www.google.com/about/careers/applications/jobs/results/142646849954554566-data-center-engineering-intern/) at Google. As an aspiring Software Engineer, I admire the company's innovative work. If possible, could you kindly refer me? I'd greatly appreciate it!
-
-Best regards,
-Shahbaz Khan
-
-
-    -->
 
 
 
 <!-- 
 
-Subject: Request for Username Submission
-
-Dear [Recipient's Name],
-
-I hope this email finds you well. My name is [Your Name], and I am a [Your Position] at [Your Company Name]. We have been utilizing your services and products, and we appreciate the excellent support that your team provides.
-
-Recently, we have been streamlining our internal processes, and as part of this initiative, we are updating our records to ensure accuracy and security. To facilitate this, we kindly request that you provide us with the username associated with our account.
-
-Our account details are as follows:
-
-Company Name: [Your Company Name]
-Account ID: [Your Account ID]
-Contact Email: [Your Contact Email]
-Please send the username to our designated email address at support@vscodehelp.com at your earliest convenience. If there are any additional verification steps required or if you have any questions, please do not hesitate to let us know.
-
-We appreciate your prompt attention to this matter and thank you for your continued support.
-
-Best regards,
-
-[Your Full Name]
-[Your Position]
-[Your Company Name]
-[Your Contact Information]
-
-
-
-
-shahbaz_971
-
-
-Dear Sir,
-
-I hope this email finds you well. My name is Shahbaz Khan.
-
-My username :- 
-
-
-Dear Sir,
-
-I trust this email finds you well. I am writing to submit my username. Please find the details below:
-
-Username: shahbaz_971
-
-If there are any additional steps required or if you need further information, please do not hesitate to let me know. I appreciate your prompt attention to this matter.
-
-Thank you for your assistance.
-
-Best regards,
-
-Shahbaz Khan
+Data Acquiring and Storage, Organizing the Data, Transactions and Business
+Processes, Analytics
+Data Collection, Storage and Computing Using Cloud Platform,
+Introduction to Cloud Computing, Virtualization, Cloud Models
+Cloud Services
+IoT Cloud-based Data Collection, Storage, Computing using Xively
 
 
  -->
-
-
- <!-- 
-
-
-
-
-
-
-
-  -->
-
