--- a/index.html
+++ b/index.html
@@ -51,4 +51,23 @@ Cloud Services
 IoT Cloud-based Data Collection, Storage, Computing using Xively
 
 
+
+
+
+Data acquisition :
+
+It means acquiring data from IoT or M2M devices.
+The data communicates after the interaction with a data
+ao acquisition System (app)
+The app interacts and communicates with a no. of device
+for acquiring the needed data.
+
+An app can confiqure the devices for the data when
+devices have configuration capabllity.
+
+Ex: The system can configure devices t send data at.
+defined periodic internals.
+
+
+
  -->
