--- a/index.html
+++ b/index.html
@@ -70,4 +70,30 @@ defined periodic internals.
 
 
 
+CoRE environment typically refers to the Constraied
+RESTful Envivonmeit (CoRE) Standard which is a
+set of speeikicatioas defined by the Internet Engg.
+Task Foyce (IETE) to enable yesource -constrajned
+devices to intract with theInternet using RESTAul
+web services
+These stds are desineol for ToT and other envs
+where devices imay have limiteol proussing powey
+memovy and communicahon eapabilities.
+
  -->
+
+
+
+ <!-- 
+
+
+
+Hi,
+
+I hope this message finds you well! I came across the Intern - Software Development Engineer (https://philips.wd3.myworkdayjobs.com/jobs-and-careers/job/Chennai-ex-Madras/B-Tech-Interns---6-Months_510397/) at Philips. As an aspiring Software Engineer, I admire the company's innovative work. If possible, could you kindly refer me? I'd greatly appreciate it!
+
+Best regards,
+Shahbaz Khan
+
+
+  -->
