--- a/index.html
+++ b/index.html
@@ -41,46 +41,6 @@
 
 
 
-<!-- 
-
-Data Acquiring and Storage, Organizing the Data, Transactions and Business
-Processes, Analytics
-Data Collection, Storage and Computing Using Cloud Platform,
-Introduction to Cloud Computing, Virtualization, Cloud Models
-Cloud Services
-IoT Cloud-based Data Collection, Storage, Computing using Xively
-
-
-
-
-
-Data acquisition :
-
-It means acquiring data from IoT or M2M devices.
-The data communicates after the interaction with a data
-ao acquisition System (app)
-The app interacts and communicates with a no. of device
-for acquiring the needed data.
-
-An app can confiqure the devices for the data when
-devices have configuration capabllity.
-
-Ex: The system can configure devices t send data at.
-defined periodic internals.
-
-
-
-CoRE environment typically refers to the Constraied
-RESTful Envivonmeit (CoRE) Standard which is a
-set of speeikicatioas defined by the Internet Engg.
-Task Foyce (IETE) to enable yesource -constrajned
-devices to intract with theInternet using RESTAul
-web services
-These stds are desineol for ToT and other envs
-where devices imay have limiteol proussing powey
-memovy and communicahon eapabilities.
-
- -->
 
 
 
@@ -100,5 +60,12 @@ Shahbaz Khan
 
   <!-- 
 
-    
+
+Hi,
+
+I hope this message finds you well! I came across the FullStack Intern  (https://browserstack.wd3.myworkdayjobs.com/en-US/External/job/India-Remote/FullStack-Intern--2024-Graduates---85--CGPA-_JR100980) at BrowserStack. As an aspiring Software Engineer, I admire the company's innovative work. If possible, could you kindly refer me? I'd greatly appreciate it!
+
+Best regards,
+Shahbaz Khan
+
    -->
