--- a/index.html
+++ b/index.html
@@ -44,4 +44,8 @@
 
 
 
- <!--  -->
+ <!--  
+
+
+  Completely agree - investing in students is investing in the future! Your commitment to helping students with their resumes is inspiring and truly impactful. Wishing you continued success in empowering the next generation. #education #impact
+ -->
