--- a/index.html
+++ b/index.html
@@ -44,3 +44,25 @@
 
 
 
+<!-- 
+
+
+Dear Swarnima,
+
+I hope this message finds you well. Thank you for your previous communication, and I appreciate the update regarding the rescheduled internship drive.
+
+I am excited about the opportunity to be a part of the interview process at AiDash. However, I wanted to bring to your attention that my ongoing exams are scheduled to conclude on January 5, 2024. Considering this, I kindly request your understanding and flexibility in scheduling my interview after this date.
+
+I am enthusiastic about the prospect of joining AiDash, and I believe that a post-exam timeframe would allow me to fully focus on the interview process. I am committed to giving my best during the evaluation and believe that this adjustment would contribute to a more conducive environment for both parties.
+
+I would be grateful if we could discuss and arrange a suitable interview slot for me post-January 5, 2024. I understand the need for a smooth recruitment process and assure you of my commitment to making this transition as seamless as possible.
+
+Thank you for your consideration, and I look forward to the opportunity to interview with AiDash.
+
+Wishing you and the entire Talent Acquisition Team a wonderful New Year!
+
+Warm regards,
+Shahbaz Khan
+7710968756
+
+ -->
